--- a/vignettes/template_es_data.Rmd
+++ b/vignettes/template_es_data.Rmd
@@ -2,7 +2,7 @@
 title: "Templates for input data sets"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Templates for input data sets}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
