tweaking topo func and docs

--- a/vignettes/metadata_functions.Rmd
+++ b/vignettes/metadata_functions.Rmd
@@ -55,9 +55,8 @@ x[5, 'wrapped_pkg'] <- "[elevatr](https://cran.r-project.org/web/packages/elevat
 x[5, 'wrapped_func'] <- "[get_elev_point](https://www.rdocumentation.org/packages/elevatr/versions/0.99.0/topics/get_elev_point)"
 x[5, 'api'] <- "[Amazon Web Services Terrain Tiles](https://registry.opendata.aws/terrain-tiles/)"
 
-
 x[6, 'wrapper_func'] <- "[get_topo_data](https://gilesjohnr.github.io/es/reference/get_topo_data.html)"
-x[6, 'description'] <- "Slope is steepness of a point/cell in degrees. Aspect is the compass direction the slope faces."
+x[6, 'description'] <- "Slope is steepness of a point in percent slope ((rise/run)*100). Aspect is the direction the slope faces in degrees."
 x[6, 'wrapped_pkg'] <- "[elevatr](https://cran.r-project.org/web/packages/elevatr/index.html), [raster](https://cran.r-project.org/web/packages/raster/index.html)"
 x[6, 'wrapped_func'] <- "[get_elev_raster](https://www.rdocumentation.org/packages/elevatr/versions/0.99.0/topics/get_elev_raster), [terrain](https://www.rdocumentation.org/packages/raster/versions/3.6-26/topics/terrain)"
 x[6, 'api'] <- "[Amazon Web Services Terrain Tiles](https://registry.opendata.aws/terrain-tiles/)"
