--- a/vignettes/metadata_functions.Rmd
+++ b/vignettes/metadata_functions.Rmd
@@ -59,10 +59,10 @@ x[4, 'api'] <- "[Open-Meteo Global Flood API](https://open-meteo.com/en/docs/flo
 
 # get_elevation_data
 
-x[5, 'wrapper_func'] <- "[get_elevation_data](https://gilesjohnr.github.io/es/reference/get_elevation_data.html)"
+x[5, 'wrapper_func'] <- "[download_elevation_data](https://gilesjohnr.github.io/es/reference/download_elevation_data.html), [get_elevation_data](https://gilesjohnr.github.io/es/reference/get_elevation_data.html)"
 x[5, 'description'] <- "Digital Elevation Model (DEM) giving the height in meters above sea level, spatial resolution is ~100m"
 x[5, 'wrapped_pkg'] <- "[elevatr](https://cran.r-project.org/web/packages/elevatr/index.html)"
-x[5, 'wrapped_func'] <- "[get_elev_point](https://www.rdocumentation.org/packages/elevatr/versions/0.99.0/topics/get_elev_point)"
+x[5, 'wrapped_func'] <- "[get_elev_raster](https://www.rdocumentation.org/packages/elevatr/versions/0.99.0/topics/get_elev_raster), [get_elev_point](https://www.rdocumentation.org/packages/elevatr/versions/0.99.0/topics/get_elev_point)"
 x[5, 'api'] <- "[Amazon Web Services Terrain Tiles](https://registry.opendata.aws/terrain-tiles/)"
 
 # get_hydro_data
@@ -75,27 +75,35 @@ x[6, 'api'] <- "DEM from [Amazon Web Services Terrain Tiles](https://registry.op
 
 # get_admin_data
 
-x[7, 'wrapper_func'] <- "[get_admin_data](https://gilesjohnr.github.io/es/reference/get_admin_data.html)"
+x[7, 'wrapper_func'] <- "[download_admin_data](https://gilesjohnr.github.io/es/reference/download_admin_data.html), [get_admin_data](https://gilesjohnr.github.io/es/reference/get_admin_data.html)"
 x[7, 'description'] <- "Names of all administrative areas for each sampling site"
-x[7, 'wrapped_pkg'] <- "[geodata](https://cran.r-project.org/web/packages/geodata/index.html)"
-x[7, 'wrapped_func'] <- "[gadm](https://rdrr.io/github/rspatial/geodata/man/gadm.html)"
-x[7, 'api'] <- "Shapefiles from [GADM maps and data](https://gadm.org/)"
+x[7, 'wrapped_pkg'] <- "NA"
+x[7, 'wrapped_func'] <- "NA"
+x[7, 'api'] <- "GeoJSON files from the [geoBoundaries API](https://www.geoboundaries.org/) (saved as ESRI Shapefiles)"
+
+# download_worldpop_data
+
+x[8, 'wrapper_func'] <- "[download_worldpop_data](https://gilesjohnr.github.io/es/reference/download_worldpop_data.html)"
+x[8, 'description'] <- "WorldPop population raster data"
+x[8, 'wrapped_pkg'] <- "NA"
+x[8, 'wrapped_func'] <- "NA"
+x[8, 'api'] <- "GeoTIFF files from the [WorldPop FTP server](https://hub.worldpop.org/geodata/listing?id=29)"
 
 # get_population_catchment
 
-x[8, 'wrapper_func'] <- "[get_population_catchment](https://gilesjohnr.github.io/es/reference/get_population_catchment.html)"
-x[8, 'description'] <- "Area of drainage catchments (sq km) and total population within each"
-x[8, 'wrapped_pkg'] <- "[WhiteboxTools R frontend](https://www.whiteboxgeo.com/wbt-frontends/) "
-x[8, 'wrapped_func'] <- "[wbt_d_inf_flow_accumulation](https://rdrr.io/rforge/whitebox/man/wbt_d_inf_flow_accumulation.html), [wbt_watershed](https://rdrr.io/cran/whitebox/man/wbt_watershed.html)"
-x[8, 'api'] <- "User supplied elevation and population rasters."
+x[9, 'wrapper_func'] <- "[get_population_catchment](https://gilesjohnr.github.io/es/reference/get_population_catchment.html)"
+x[9, 'description'] <- "Area of drainage catchments (sq km) and total population within each"
+x[9, 'wrapped_pkg'] <- "[WhiteboxTools R frontend](https://www.whiteboxgeo.com/wbt-frontends/) "
+x[9, 'wrapped_func'] <- "[wbt_d_inf_flow_accumulation](https://rdrr.io/rforge/whitebox/man/wbt_d_inf_flow_accumulation.html), [wbt_watershed](https://rdrr.io/cran/whitebox/man/wbt_watershed.html)"
+x[9, 'api'] <- "User supplied elevation and population rasters."
 
 # get_population_radius
 
-x[9, 'wrapper_func'] <- "[get_population_radius](https://gilesjohnr.github.io/es/reference/get_population_radius.html)"
-x[9, 'description'] <- "Total population within a given radius"
-x[9, 'wrapped_pkg'] <- "[raster](https://cran.r-project.org/web/packages/raster/index.html), [exactextractr](https://cran.r-project.org/web/packages/exactextractr/index.html) "
-x[9, 'wrapped_func'] <- "[buffer](https://rdrr.io/rforge/whitebox/man/wbt_d_inf_flow_accumulation.html), [exactextractr](https://rdrr.io/cran/exactextractr/man/exact_extract.html)"
-x[9, 'api'] <- "User supplied population raster."
+x[10, 'wrapper_func'] <- "[get_population_radius](https://gilesjohnr.github.io/es/reference/get_population_radius.html)"
+x[10, 'description'] <- "Total population within a given radius"
+x[10, 'wrapped_pkg'] <- "[raster](https://cran.r-project.org/web/packages/raster/index.html), [exactextractr](https://cran.r-project.org/web/packages/exactextractr/index.html) "
+x[10, 'wrapped_func'] <- "[buffer](https://rdrr.io/rforge/whitebox/man/wbt_d_inf_flow_accumulation.html), [exactextractr](https://rdrr.io/cran/exactextractr/man/exact_extract.html)"
+x[10, 'api'] <- "User supplied population raster."
 
 knitr::kable(
      x,
