--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -100,3 +100,32 @@ Section: Journal of Molecular Endocrinology},
 	note = {https://doi.org/10.21775/9781910190098},
 	langid = {en}
 }
+
+@article{yuan2008,
+	title = {Statistical methods for efficiency adjusted real{-}time PCR quantification},
+	author = {Yuan, Joshua S. and Wang, Donglin and Stewart, C. Neal},
+	year = {2008},
+	month = {01},
+	date = {2008-01},
+	journal = {Biotechnology Journal},
+	pages = {112--123},
+	volume = {3},
+	number = {1},
+	doi = {10.1002/biot.200700169},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/biot.200700169},
+	langid = {en}
+}
+
+@article{yuan2006,
+	title = {Statistical analysis of real-time PCR data},
+	author = {Yuan, Joshua S. and Reed, Ann and Chen, Feng and Stewart, C Neal},
+	year = {2006},
+	month = {02},
+	date = {2006-02-22},
+	journal = {BMC Bioinformatics},
+	pages = {85},
+	volume = {7},
+	number = {1},
+	doi = {10.1186/1471-2105-7-85},
+	url = {https://doi.org/10.1186/1471-2105-7-85}
+}
